--- a/README.adoc
+++ b/README.adoc
@@ -60,7 +60,30 @@ Add `electron-log` to your runtime dependencies:
 yarn add electron-log
 ----
 
-=== Peer dependencies at build time
+=== Build configuration & build-time dependencies
+
+[NOTE]
+====
+If you have not added custom Webpack configuration for main thread,
+make sure you configure `electron-webpack` to use it by updating your package.json:
+
+[source]
+----
+...
+"electronWebpack": {
+  ...
+  "main": {
+    ...
+    "webpackConfig": "main.webpack.js"
+  }
+},
+----
+
+Given that, Webpack configuration described below
+will go in file named "main.webpack.js" in the same directory as your package.json.
+====
+
+==== Threads
 
 Coulomb uses Node workers for Git operations that would otherwise
 block the UI, even though they run in main thread.
@@ -89,29 +112,54 @@ module.exports = function (config) {
   // other configuration...
 }
 ----
-+
-[NOTE]
-====
-If you have not added custom Webpack configuration for main thread,
-make sure you configure `electron-webpack` to use it by updating your package.json:
 
+==== Node native extensions
+
+Some Coulomb dependencies use Node extensions (namely, `node-keytar`).
+
+To ensure those extensions get appropriately packed,
+
+. add the `native-ext-loader` build-time dependency:
++
 [source]
 ----
-...
-"electronWebpack": {
-  ...
-  "main": {
-    ...
-    "webpackConfig": "main.webpack.js"
-  }
-},
+yarn add --dev native-ext-loader
 ----
 
-In this example, `ThreadsPlugin` instantiation described above
-will go in file named "main.webpack.js" in the same directory as your package.json.
+. Configure Webpack for your main thread to use `native-ext-loader`
+_instead of_ electron-webpack’s default choice of `node-loader`.
++
+This may be done like so:
++
+[source]
+----
+module.exports = function (config) {
+
+  config.module.rules = config.module.rules.filter(r => {
+    return (r.use !== 'node-loader');
+  })
+
+  config.module.rules.unshift({
+    test: /\.node$/,
+    use: {
+      loader: 'native-ext-loader',
+      options: {
+        rewritePath: undefined,
+        name: '[path][name].[ext]',
+      },
+    },
+  });
+  // other configuration...
+}
+----
+
+[NOTE]
+====
+Heads-up! This exact solution may break if `electron-webpack` changes the way
+it specifies `node-loader`, so be careful when upgrading it.
 ====
 
-=== Electron build configuration
+==== Electron build configuration
 
 Add the following to your package.json file under "build":
 
@@ -121,7 +169,7 @@ Add the following to your package.json file under "build":
   "build": {
     ...
     "asarUnpack": [
-      "node_modules/keytar/build/Release/*",
+      "**/*.node",
       "node_modules/source-map/**/*",
       "node_modules/source-map-support/**/*",
       "node_modules/buffer-from/**/*",
