--- a/README.adoc
+++ b/README.adoc
@@ -100,6 +100,8 @@ yarn add --dev threads-plugin
 +
 [source]
 ----
+const ThreadsPlugin = require('threads-plugin');
+
 module.exports = function (config) {
   config.plugins.unshift(
     new ThreadsPlugin({ target: 'electron-node-worker' })
